--- a/src/colors.css
+++ b/src/colors.css
@@ -11,6 +11,6 @@
   --color-nemo-dark: #0fe5da;
   /* Used for borders and some backgrounds and hover effects */
   --color-water-10: #e4e8f0;
-  --color-water: #f3f5f9;
+  --color-water: #eceff5;
   /* background for everything  */
 }
