--- a/src/colors.css
+++ b/src/colors.css
@@ -8,7 +8,7 @@
   /* active color for buttons, icons, etc. */
   --color-nemo-mid: #ff5c29;
   /* hover color for buttons, icons, etc. */
-  --color-nemo-dark: #0fe5da;
+  --color-nemo-dark: #e5430f;
   /* Used for borders and some backgrounds and hover effects */
   --color-water-10: #e4e8f0;
   --color-water: #eceff5;
